# serializer version: 1
# name: test_covers[cover.device_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.device_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GATE: 'gate'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'fluss',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '2a303030sdj1_cover',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[cover.device_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'gate',
      'friendly_name': 'Device 1',
      'is_closed': True,
      'supported_features': <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.device_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_covers[cover.device_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.device_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GATE: 'gate'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'fluss',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'ape93k9302j2_cover',
    'unit_of_measurement': None,
  })
# ---
# name: test_covers[cover.device_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'gate',
      'friendly_name': 'Device 2',
      'is_closed': False,
      'supported_features': <CoverEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.device_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
